# cqase-pytest

./: .flake8  README.md  pyproject.toml  pytest.ini
pytest_cqase/: __init__.py  conftest.py  plugin.py  singltone_like.py
test/: pytest.ini  test_qase.py
